samples/_failures_safe/1761207604_cfecdf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd1f93f2.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_bd1f93f2.c:132:20: error: missing terminating " character
  132 |             printf("[%s] %
      |                    ^~~~~~~
./samples/SAFE/__tmp_bd1f93f2.c:132:13: error: expected expression at end of input
  132 |             printf("[%s] %
      |             ^~~~~~
./samples/SAFE/__tmp_bd1f93f2.c:132:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bd1f93f2.c:132:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bd1f93f2.c:132:13: error: expected declaration or statement at end of input
